--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "html-pdf-node": "^1.0.8",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "net": "^1.0.2",
     "node-thermal-printer": "^4.4.5",
     "pdf-to-printer": "^5.6.0",
     "pdfkit": "^0.17.0",
+    "puppeteer": "^24.7.2",
     "systeminformation": "^5.25.11",
     "usb": "^2.15.0"
   }
